(pub) - Fix a bug with seated plan on mobile devices - refs #4760 (#453)

--- a/web/css/pub-manifestation-synthetic.css
+++ b/web/css/pub-manifestation-synthetic.css
@@ -47,8 +47,8 @@
 #container .tab { margin-left: 0; width: 100%; position: static; }
 }
 
-/* < 480px */
-@media screen and (max-width: 480px) {
+/* < 768px */
+@media screen and (max-device-width: 768px) {
 #container h4, #container #plans { display: none; }
 #container #categories.hidden .li-content { visibility: visible; height: auto; margin-top: 17px; }
 }
